# bazel-proto-scala-test-two

./: .gitignore  README.md  WORKSPACE
three/: BUILD.bazel  three.proto
two/: BUILD.bazel  two.proto  two.scala
