load("@io_bazel_rules_scala//scala_proto:scala_proto.bzl", "scalapb_proto_library")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
package(default_visibility = ["//visibility:public"])

proto_library(
	name = "proto",
	srcs = glob(["**/*.proto"]),
	strip_import_prefix = "/" + package_name(),
	deps = [ "@bazel_proto_scala_test_one//a/b/one/src/main/proto:proto" ]
)

scalapb_proto_library(
	name = "proto_scala",
	deps = [":proto"],
)
